fixed formatting for rock image on mobile

--- a/react-app/src/css/hero.css
+++ b/react-app/src/css/hero.css
@@ -7,12 +7,12 @@
         position: relative;
     }
 
-    /* .hero-image {
+    .hero-image {
         background-size: cover;
         background-position: center;
         min-height: 25vh;
         position: relative;
-    } */
+    }
     
     #hero-title-container {
         /* border: 1px solid red; */
